"mufifour" option (off by default) for the new characters not fully supported by eg Palemonas

--- a/tex/latex/mufi/mufi.sty
+++ b/tex/latex/mufi/mufi.sty
@@ -8,8 +8,7 @@
 \def\mufi@nofont{}
 
 \DeclareStringOption{font}{\mufi@nofont}
-
-% TODO select MUFI version?
+\DeclareBoolOption{mufifour}
 
 \ProcessKeyvalOptions*
 
@@ -20,33 +19,14 @@
 	\newfontface\mufi@changefont{\mufi@font}%
 \fi%
 
-\newcommand\OEligogon{{\mufi@changefont{^^^^e262}}} % LATIN CAPITAL LIGATURE OE WITH OGONEK (MUFI: 4.0)
-\newcommand\Pdblac{{\mufi@changefont{^^^^e268}}} % LATIN CAPITAL LETTER P WITH DOUBLE ACUTE (MUFI: 4.0)
-\newcommand\Vvertline{{\mufi@changefont{^^^^e34e}}} % LATIN CAPITAL LETTER V WITH VERTICAL LINE ABOVE (MUFI: 4.0)
-\newcommand\oeligogon{{\mufi@changefont{^^^^e662}}} % LATIN SMALL LIGATURE OE WITH OGONEK (MUFI: 4.0)
-\newcommand\pdblac{{\mufi@changefont{^^^^e668}}} % LATIN SMALL LETTER P WITH DOUBLE ACUTE (MUFI: 4.0)
-\newcommand\vvertline{{\mufi@changefont{^^^^e74f}}} % LATIN SMALL LETTER V WITH VERTICAL LINE ABOVE (MUFI: 4.0)
-\newcommand\idblstrok{{\mufi@changefont{^^^^e8a1}}} % LATIN SMALL LETTER I WITH TWO STROKES (MUFI: 4.0)
-\newcommand\jdblstrok{{\mufi@changefont{^^^^e8a2}}} % LATIN SMALL LETTER J WITH TWO STROKES (MUFI: 4.0)
-\newcommand\autem{{\mufi@changefont{^^^^e8a3}}} % LATIN ABBREVIATION SIGN AUTEM (MUFI: 4.0)
-\newcommand\vslashura{{\mufi@changefont{^^^^e8bb}}} % LATIN SMALL LETTER V WITH SHORT SLASH ABOVE RIGHT (MUFI: 4.0 auto)
-\newcommand\vslashuradbl{{\mufi@changefont{^^^^e8bc}}} % LATIN SMALL LETTER V WITH TWO SHORT SLASHES ABOVE RIGHT (MUFI: 4.0 auto)
 \newcommand\thornrarmlig{{\mufi@changefont{^^^^e8c1}}} % LATIN SMALL LETTER THORN LIGATED WITH ARM OF LATIN SMALL LETTER R (MUFI: 3.0)
 \newcommand\Hrarmlig{{\mufi@changefont{^^^^e8c2}}} % LATIN CAPITAL LETTER H LIGATED WITH ARM OF LATIN SMALL LETTER R (MUFI: 3.0)
 \newcommand\hrarmlig{{\mufi@changefont{^^^^e8c3}}} % LATIN SMALL LETTER H LIGATED WITH ARM OF LATIN SMALL LETTER R (MUFI: 3.0)
 \newcommand\krarmlig{{\mufi@changefont{^^^^e8c5}}} % LATIN SMALL LETTER K LIGATED WITH ARM OF LATIN SMALL LETTER R (MUFI: 3.0)
-\newcommand\UUlig{{\mufi@changefont{^^^^e8c6}}} % LATIN CAPITAL LIGATURE UU (MUFI: 4.0 auto)
-\newcommand\uulig{{\mufi@changefont{^^^^e8c7}}} % LATIN SMALL LIGATURE UU (MUFI: 4.0 auto)
-\newcommand\UElig{{\mufi@changefont{^^^^e8c8}}} % LATIN CAPITAL LIGATURE UE (MUFI: 4.0 auto)
-\newcommand\uelig{{\mufi@changefont{^^^^e8c9}}} % LATIN SMALL LIGATURE UE (MUFI: 4.0 auto)
-\newcommand\xslashlradbl{{\mufi@changefont{^^^^e8ce}}} % LATIN SMALL LETTER X WITH TWO SHORT SLASHES BELOW RIGHT (MUFI: 4.0 auto)
 \newcommand\aeligring{{\mufi@changefont{^^^^e8d1}}} % LATIN SMALL LETTER AE WITH RING ABOVE (MUFI: 3.0)
 \newcommand\aeligogonacute{{\mufi@changefont{^^^^e8d3}}} % LATIN SMALL LETTER AE WITH OGONEK AND ACUTE (MUFI: 3.0)
 \newcommand\adiaguml{{\mufi@changefont{^^^^e8d5}}} % LATIN SMALL LETTER A WITH DIAGONAL DIAERESIS (MUFI: 3.0)
 \newcommand\odiaguml{{\mufi@changefont{^^^^e8d7}}} % LATIN SMALL LETTER O WITH DIAGONAL DIAERESIS (MUFI: 3.0)
-\newcommand\inodotogon{{\mufi@changefont{^^^^e8dd}}} % LATIN SMALL LETTER DOTLESS I WITH OGONEK (MUFI: 4.0 auto)
-\newcommand\orrotlig{{\mufi@changefont{^^^^e8de}}} % LATIN SMALL LIGATURE O R ROTUNDA (MUFI: 4.0 auto)
-\newcommand\slonglbarlig{{\mufi@changefont{^^^^e8df}}} % LATIN SMALL LIGATURE LONG S L WITH STROKE (MUFI: 4.0 auto)
 \newcommand\iesup{{\mufi@changefont{^^^^e8e0}}} % LATIN SMALL LETTER A WITH LATIN SMALL LETTER I ABOVE (MUFI: 3.0)
 \newcommand\ausup{{\mufi@changefont{^^^^e8e1}}} % LATIN SMALL LETTER A WITH LATIN SMALL LETTER U ABOVE (MUFI: 3.0)
 \newcommand\eesup{{\mufi@changefont{^^^^e8e2}}} % LATIN SMALL LETTER E WITH LATIN SMALL LETTER E ABOVE (MUFI: 3.0)
@@ -95,7 +75,7 @@
 \newcommand\Finsacute{{\mufi@changefont{^^^^ebb3}}} % LATIN CAPITAL LETTER INSULAR F WITH ACUTE (MUFI: 3.0)
 \newcommand\finsacute{{\mufi@changefont{^^^^ebb4}}} % LATIN SMALL LETTER INSULAR F WITH ACUTE (MUFI: 3.0)
 \newcommand\Muncacute{{\mufi@changefont{^^^^ebb5}}} % LATIN CAPITAL LETTER UNCIAL M WITH ACUTE (MUFI: 3.0)
-% \newcommand\muncacute{{\mufi@changefont{^^^^ebb6}}} % LATIN SMALL LETTER UNCIAL M WITH ACUTE (MUFI: 3.0)
+\newcommand\muncacute{{\mufi@changefont{^^^^ebb6}}} % LATIN SMALL LETTER UNCIAL M WITH ACUTE (MUFI: 3.0)
 \newcommand\Ocurlacute{{\mufi@changefont{^^^^ebb7}}} % LATIN CAPITAL LETTER O WITH CURL AND ACUTE (MUFI: 3.0)
 \newcommand\ocurlacute{{\mufi@changefont{^^^^ebb8}}} % LATIN SMALL LETTER O WITH CURL AND ACUTE (MUFI: 3.0)
 \newcommand\rrotacute{{\mufi@changefont{^^^^ebb9}}} % LATIN SMALL LETTER R ROTUNDA WITH ACUTE (MUFI: 3.0)
@@ -259,10 +239,6 @@
 \newcommand\athornlig{{\mufi@changefont{^^^^efac}}} % LATIN SMALL LIGATURE A THORN (MUFI: 3.0)
 \newcommand\oclig{{\mufi@changefont{^^^^efad}}} % LATIN SMALL LIGATURE OC (MUFI: 3.0)
 \newcommand\AnecklessElig{{\mufi@changefont{^^^^efae}}} % LATIN CAPITAL LIGATURE NECKLESS A E (MUFI: 3.0)
-\newcommand\uuligdblac{{\mufi@changefont{^^^^efd8}}} % LATIN SMALL LIGATURE UU WITH DOUBLE ACUTE (MUFI: 4.0 auto)
-\newcommand\UUligdblac{{\mufi@changefont{^^^^efd9}}} % LATIN CAPITAL LIGATURE UU WITH DOUBLE ACUTE  (MUFI: 4.0 auto)
-\newcommand\AEligdotacute{{\mufi@changefont{^^^^efdb}}} % LATIN CAPITAL LETTER AE WITH DOT ABOVE AND ACUTE (MUFI: 4.0 auto)
-\newcommand\aeligdotacute{{\mufi@changefont{^^^^efdc}}} % LATIN SMALL LETTER AE WITH DOT ABOVE AND ACUTE (MUFI: 4.0 auto)
 \newcommand\oeligenl{{\mufi@changefont{^^^^efdd}}} % LATIN ENLARGED LETTER SMALL LIGATURE OE (MUFI: 3.0)
 \newcommand\aoligenl{{\mufi@changefont{^^^^efde}}} % LATIN ENLARGED LETTER SMALL LIGATURE AO (MUFI: 3.0)
 \newcommand\aaligenl{{\mufi@changefont{^^^^efdf}}} % LATIN ENLARGED LETTER SMALL LIGATURE AA (MUFI: 3.0)
@@ -357,7 +333,6 @@
 \newcommand\usbase{{\mufi@changefont{^^^^f1a6}}} % LATIN ABBREVIATION SIGN SPACING BASE-LINE US (MUFI: 3.0)
 \newcommand\ETslash{{\mufi@changefont{^^^^f1a7}}} % LATIN ABBREVIATION SIGN CAPITAL ET WITH STROKE (MUFI: 3.0)
 \newcommand\sem{{\mufi@changefont{^^^^f1ac}}} % LATIN ABBREVIATION SIGN SEMICOLON (MUFI: 3.0)
-\newcommand\chlig{{\mufi@changefont{^^^^f1bb}}} % LATIN SMALL LIGATURE CH (MUFI: 4.0 auto)
 \newcommand\foumllig{{\mufi@changefont{^^^^f1bc}}} % LATIN SMALL LIGATURE F O WITH DIAERESIS (MUFI: 3.0)
 \newcommand\smallzero{{\mufi@changefont{^^^^f1bd}}} % SMALL BASE LINE ZERO SIGN (MUFI: 3.0)
 \newcommand\Vmod{{\mufi@changefont{^^^^f1be}}} % MODIFIER CAPITAL LETTER V (MUFI: 3.0)
@@ -370,7 +345,6 @@
 \newcommand\ercurl{{\mufi@changefont{^^^^f1c8}}} % COMBINING ABBREVIATION MARK ZIGZAG ABOVE CURLY FORM (MUFI: 3.0)
 \newcommand\combdothigh{{\mufi@changefont{^^^^f1ca}}} % COMBINING DOT ABOVE HIGH POSITION (MUFI: 3.0)
 \newcommand\combcurlbar{{\mufi@changefont{^^^^f1cc}}} % COMBINING CURLY BAR ABOVE (MUFI: 3.0)
-\newcommand\tridagger{{\mufi@changefont{^^^^f1d2}}} % TRIPLE DAGGER (MUFI: 4.0 auto)
 \newcommand\midring{{\mufi@changefont{^^^^f1da}}} % MIDDLE RING (MUFI: 3.0)
 \newcommand\ramus{{\mufi@changefont{^^^^f1db}}} % PALM BRANCH (MUFI: 3.0)
 \newcommand\medcom{{\mufi@changefont{^^^^f1e0}}} % MEDIEVAL COMMA (MUFI: 3.0)
@@ -431,9 +405,6 @@
 \newcommand\xldes{{\mufi@changefont{^^^^f232}}} % LATIN SMALL LETTER X WITH LEFT DESCENDER (MUFI: 3.0)
 \newcommand\yrgmainstrok{{\mufi@changefont{^^^^f233}}} % LATIN SMALL LETTER Y WITH RIGHT MAIN STROKE (MUFI: 3.0)
 \newcommand\hrdes{{\mufi@changefont{^^^^f23a}}} % LATIN SMALL LETTER H WITH RIGHT DESCENDER (MUFI: 3.0)
-\newcommand\munc{{\mufi@changefont{^^^^f23c}}} % LATIN SMALL LETTER M UNCIAL FORM (MUFI: 4.0 auto)
-\newcommand\muncrdes{{\mufi@changefont{^^^^f23d}}} % LATIN SMALL LETTER M UNCIAL FORM WITH RIGHT DESCENDER (MUFI: 4.0 auto)
-\newcommand\muncacute{{\mufi@changefont{^^^^f23e}}} % LATIN SMALL LETTER M UNCIAL FORM WITH ACUTE ACCENT (MUFI: 4.0 auto)
 \newcommand\romnumCrevovl{{\mufi@changefont{^^^^f23f}}} % ROMAN NUMERAL REVERSED ONE HUNDRED WITH OVERLINE (MUFI: 3.0)
 \newcommand\romaslibr{{\mufi@changefont{^^^^f2e0}}} % LATIN AS LIBRALIS SIGN (MUFI: 3.0)
 \newcommand\romscapxbar{{\mufi@changefont{^^^^f2e2}}} % LATIN SMALL CAPITAL LETTER X WITH BAR (MUFI: 3.0)
@@ -459,11 +430,6 @@
 \newcommand\schillgerm{{\mufi@changefont{^^^^f2f7}}} % GERMAN SCHILLING SIGN (MUFI: 3.0)
 \newcommand\schillgermscript{{\mufi@changefont{^^^^f2f8}}} % GERMAN SCRIPT SCHILLING SIGN (MUFI: 3.0)
 \newcommand\scudi{{\mufi@changefont{^^^^f2f9}}} % SCUDI SIGN (MUFI: 3.0)
-\newcommand\krone{{\mufi@changefont{^^^^f2fa}}} % KRONE SIGN (MUFI: 4.0 auto)
-\newcommand\helbing{{\mufi@changefont{^^^^f2fb}}} % HELBING SIGN (MUFI: 4.0 auto)
-\newcommand\ouncescript{{\mufi@changefont{^^^^f2fd}}} % SCRIPT OUNCE SIGN (MUFI: 3.0)
-\newcommand\Cnumbar{{\mufi@changefont{^^^^f2fe}}} % ROMAN NUMERAL CAPITAL C WITH TWO BARS (MUFI: 4.0 auto)
-\newcommand\cnumbar{{\mufi@changefont{^^^^f2ff}}} % ROMAN NUMERAL SMALL C WITH TWO BARS (MUFI: 4.0 auto)
 \newcommand\lllig{{\mufi@changefont{^^^^f4f9}}} % LATIN SMALL LIGATURE LL (MUFI: 3.0)
 \newcommand\slongchlig{{\mufi@changefont{^^^^f4fa}}} % LATIN SMALL LIGATURE LONG S CH (MUFI: 3.0)
 \newcommand\slongjlig{{\mufi@changefont{^^^^f4fb}}} % LATIN SMALL LIGATURE LONG S J (MUFI: 3.0)
@@ -499,5 +465,41 @@
 \newcommand\Lovlhigh{{\mufi@changefont{^^^^f7b4}}} % LATIN CAPITAL LETTER L WITH HIGH OVERLINE (ABOVE CHARACTER) (MUFI: 3.0)
 \newcommand\Covlhigh{{\mufi@changefont{^^^^f7b5}}} % LATIN CAPITAL LETTER C WITH HIGH OVERLINE (ABOVE CHARACTER) (MUFI: 3.0)
 \newcommand\Dovlhigh{{\mufi@changefont{^^^^f7b6}}} % LATIN CAPITAL LETTER D WITH HIGH OVERLINE (ABOVE CHARACTER) (MUFI: 3.0)
+
+\ifmufi@mufifour
+\newcommand\OEligogon{{\mufi@changefont{^^^^e262}}} % LATIN CAPITAL LIGATURE OE WITH OGONEK (MUFI: 4.0)
+\newcommand\Pdblac{{\mufi@changefont{^^^^e268}}} % LATIN CAPITAL LETTER P WITH DOUBLE ACUTE (MUFI: 4.0)
+\newcommand\Vvertline{{\mufi@changefont{^^^^e34e}}} % LATIN CAPITAL LETTER V WITH VERTICAL LINE ABOVE (MUFI: 4.0)
+\newcommand\oeligogon{{\mufi@changefont{^^^^e662}}} % LATIN SMALL LIGATURE OE WITH OGONEK (MUFI: 4.0)
+\newcommand\pdblac{{\mufi@changefont{^^^^e668}}} % LATIN SMALL LETTER P WITH DOUBLE ACUTE (MUFI: 4.0)
+\newcommand\vvertline{{\mufi@changefont{^^^^e74f}}} % LATIN SMALL LETTER V WITH VERTICAL LINE ABOVE (MUFI: 4.0)
+\newcommand\idblstrok{{\mufi@changefont{^^^^e8a1}}} % LATIN SMALL LETTER I WITH TWO STROKES (MUFI: 4.0)
+\newcommand\jdblstrok{{\mufi@changefont{^^^^e8a2}}} % LATIN SMALL LETTER J WITH TWO STROKES (MUFI: 4.0)
+\newcommand\autem{{\mufi@changefont{^^^^e8a3}}} % LATIN ABBREVIATION SIGN AUTEM (MUFI: 4.0)
+\newcommand\vslashura{{\mufi@changefont{^^^^e8bb}}} % LATIN SMALL LETTER V WITH SHORT SLASH ABOVE RIGHT (MUFI: 4.0 auto)
+\newcommand\vslashuradbl{{\mufi@changefont{^^^^e8bc}}} % LATIN SMALL LETTER V WITH TWO SHORT SLASHES ABOVE RIGHT (MUFI: 4.0 auto)
+\newcommand\UUlig{{\mufi@changefont{^^^^e8c6}}} % LATIN CAPITAL LIGATURE UU (MUFI: 4.0 auto)
+\newcommand\uulig{{\mufi@changefont{^^^^e8c7}}} % LATIN SMALL LIGATURE UU (MUFI: 4.0 auto)
+\newcommand\UElig{{\mufi@changefont{^^^^e8c8}}} % LATIN CAPITAL LIGATURE UE (MUFI: 4.0 auto)
+\newcommand\uelig{{\mufi@changefont{^^^^e8c9}}} % LATIN SMALL LIGATURE UE (MUFI: 4.0 auto)
+\newcommand\xslashlradbl{{\mufi@changefont{^^^^e8ce}}} % LATIN SMALL LETTER X WITH TWO SHORT SLASHES BELOW RIGHT (MUFI: 4.0 auto)
+\newcommand\inodotogon{{\mufi@changefont{^^^^e8dd}}} % LATIN SMALL LETTER DOTLESS I WITH OGONEK (MUFI: 4.0 auto)
+\newcommand\orrotlig{{\mufi@changefont{^^^^e8de}}} % LATIN SMALL LIGATURE O R ROTUNDA (MUFI: 4.0 auto)
+\newcommand\slonglbarlig{{\mufi@changefont{^^^^e8df}}} % LATIN SMALL LIGATURE LONG S L WITH STROKE (MUFI: 4.0 auto)
+\newcommand\uuligdblac{{\mufi@changefont{^^^^efd8}}} % LATIN SMALL LIGATURE UU WITH DOUBLE ACUTE (MUFI: 4.0 auto)
+\newcommand\UUligdblac{{\mufi@changefont{^^^^efd9}}} % LATIN CAPITAL LIGATURE UU WITH DOUBLE ACUTE  (MUFI: 4.0 auto)
+\newcommand\AEligdotacute{{\mufi@changefont{^^^^efdb}}} % LATIN CAPITAL LETTER AE WITH DOT ABOVE AND ACUTE (MUFI: 4.0 auto)
+\newcommand\aeligdotacute{{\mufi@changefont{^^^^efdc}}} % LATIN SMALL LETTER AE WITH DOT ABOVE AND ACUTE (MUFI: 4.0 auto)
+\newcommand\chlig{{\mufi@changefont{^^^^f1bb}}} % LATIN SMALL LIGATURE CH (MUFI: 4.0 auto)
+\newcommand\tridagger{{\mufi@changefont{^^^^f1d2}}} % TRIPLE DAGGER (MUFI: 4.0 auto)
+\newcommand\munc{{\mufi@changefont{^^^^f23c}}} % LATIN SMALL LETTER M UNCIAL FORM (MUFI: 4.0 auto)
+\newcommand\muncrdes{{\mufi@changefont{^^^^f23d}}} % LATIN SMALL LETTER M UNCIAL FORM WITH RIGHT DESCENDER (MUFI: 4.0 auto)
+% muncacute clashes with the previous declaration (ebb6)
+\renewcommand\muncacute{{\mufi@changefont{^^^^f23e}}} % LATIN SMALL LETTER M UNCIAL FORM WITH ACUTE ACCENT (MUFI: 4.0 auto)
+\newcommand\krone{{\mufi@changefont{^^^^f2fa}}} % KRONE SIGN (MUFI: 4.0 auto)
+\newcommand\helbing{{\mufi@changefont{^^^^f2fb}}} % HELBING SIGN (MUFI: 4.0 auto)
+\newcommand\Cnumbar{{\mufi@changefont{^^^^f2fe}}} % ROMAN NUMERAL CAPITAL C WITH TWO BARS (MUFI: 4.0 auto)
+\newcommand\cnumbar{{\mufi@changefont{^^^^f2ff}}} % ROMAN NUMERAL SMALL C WITH TWO BARS (MUFI: 4.0 auto)
+\fi
 
 \makeatother
