--- a/docs/example.tex
+++ b/docs/example.tex
@@ -1,15 +1,23 @@
 % !TEX TS-program = lualatex
 \documentclass{article}
 
+\usepackage{fontspec}
+\newfontfamily\mufifont{Palemonas MUFI}
+\newfontfamily\titusfont{TITUS Cyberbit Basic}
+
 \usepackage[
-	font={Palemonas MUFI},
-	mufifour
-]{mufi}
+	CYFI,
+	MUFI,
+	fonts={
+		CYFI=\titusfont,
+		MUFI=\mufifont,
+	},
+]{unicode-alphabets}
 
 \setlength{\parindent}{0pt}
 
 \newcommand\display[1]{%
-	\texttt{\ignorespaces\detokenize{#1}}: [#1]%
+	\texttt{\ignorespaces\detokenize{#1}}: \fbox{#1}%
 }
 
 \begin{document}
@@ -23,24 +31,34 @@
 \display{ċ} --- 
 
 \section{MUFI 3.0 characters}
+\display{\mufi{FLOURISHED SMALL LETTER M SIGN}}\\
 \display{\msignflour{}} --- 
 \display{\mufi{msignflour}} --- 
-\display{\mufi{F2F3}}\\
+\display{\mufi{F2F3}}
+
+\vspace{8pt}
+\display{\mufi{LATIN SMALL LETTER Y WITH RIGHT MAIN STROKE}}\\
 \display{\yrgmainstrok{}} --- 
 \display{\mufi{yrgmainstrok}} --- 
 \display{\mufi{F233}}
-
 
 \section{MUFI 4.0 characters}
 Note that the currently installed Palemonas MUFI font on this machine does not have the OEligogon character.
 
 \vspace{12pt}
+\display{\mufi{LATIN CAPITAL LIGATURE OE WITH OGONEK}}\\ 
 \display{\OEligogon{}} --- 
 \display{\mufi{OEligogon}} --- 
-\display{\mufi{E262}}\\
+\display{\mufi{E262}}
+
+\vspace{8pt}
+\display{\mufi{LATIN CAPITAL LIGATURE UU}}\\
 \display{\UUlig{}} --- 
 \display{\mufi{UUlig}} --- 
-\display{\mufi{E8C6}}\\
+\display{\mufi{E8C6}}
+
+\vspace{8pt}
+\display{\mufi{HELBING SIGN}}\\
 \display{\helbing{}} --- 
 \display{\mufi{helbing}} --- 
 \display{\mufi{F2FB}}
@@ -51,10 +69,17 @@ The unstarred commands use the configured font, whereas the starred version simp
 
 \vspace{12pt}
 \display{\mufi{0040}} --- 
-\display{\mufi*{0040}}\\
+\display{\mufi*{0040}}
+
 \display{\mufi{0041}} --- 
-\display{\mufi*{0041}}\\
+\display{\mufi*{0041}}
+
 \display{\msignflour{}} --- 
-\display{\msignflour*{}}\\
+\display{\msignflour*{}}
+
+\section{CYFI characters}
+\display{\cyfi{CYRILLIC CAPITAL LETTER REVERSED A}}\\
+\display{\cyfi{F330}}
+
 
 \end{document}
