TITUS character set

--- a/docs/example.tex
+++ b/docs/example.tex
@@ -8,9 +8,11 @@
 \usepackage[
 	CYFI,
 	MUFI,
+	TITUS,
 	fonts={
 		CYFI=\titusfont,
 		MUFI=\mufifont,
+		TITUS=\titusfont,
 	},
 ]{unicode-alphabets}
 
@@ -81,5 +83,8 @@ The unstarred commands use the configured font, whereas the starred version simp
 \display{\cyfi{CYRILLIC CAPITAL LETTER REVERSED A}}\\
 \display{\cyfi{F330}}
 
+\section{TITUS characters}
+\display{\titus{LATIN CAPITAL LETTER SCHWA WITH MACRON}}\\
+\display{\titus{E3EC}}
 
 \end{document}
