--- a/latex/unicode-alphabets.sty
+++ b/latex/unicode-alphabets.sty
@@ -29,6 +29,7 @@
 }
 \alph@setup{MUFI}{mufi}
 \alph@setup{CYFI}{cyfi}
+\alph@setup{TITUS}{titus}
 
 \newcommand\alph@make@set[2]{%
 	% #1 = character set
