--- a/docs/unicode-alphabets.bib
+++ b/docs/unicode-alphabets.bib
@@ -3,10 +3,10 @@
   author={Stötzner, Andreas},
   year={2012}
 }
-@Online {MUFI,
+@online{MUFI,
   title = {MUFI: The Medieval Unicode Font Initiative},
   date = {2019-07-12},
-  url = {https://skaldic.abdn.ac.uk/m.php?p=mufi},
+  url = {https://mufi.info/},
   urldate = {2019-07-12}
 }
 @article{CYFI,
@@ -17,22 +17,22 @@
   pages={9--26},
   year={2010}
 }
-@online {UNZ,
+@online{UNZ,
   title = {Normung von Sonderzeichen},
   author = {Bund für deutsche Schrift und Sprache e. V.},
   date = {2019-07-12},
   url = {https://www.bfds.de/der-bund/normung-von-sonderzeichen-unicode/},
   urldate = {2019-07-12}
 }
-@article{SIL,
+@online{SIL,
   title={SIL PUA 9.0},
   author={Evans, Lorna},
   date={2016-07-05},
   url={https://scripts.sil.org/SILPUAassignments}
 }
-@Online {TITUS,
+@online{TITUS,
   title = {Thesaurus Indogermanischer Text- und Sprachmaterialien},
   date = {2017-07-10},
-  url = {http://titus.uni-frankfurt.de/indexe.htm?/unicode/unitest2.htm},
+  url = {http://titus.uni-frankfurt.de/indexe.htm},
   urldate = {2019-07-12}
 }
