UNZ character set

--- a/docs/unicode-alphabets.tex
+++ b/docs/unicode-alphabets.tex
@@ -58,7 +58,7 @@ Where \verb|options| must be one or more of the following character sets, some o
 \item[MUFI\cite{MUFI}] The Medieval Unicode Font Initiative.
 % \item[SIL\cite{SIL}] SIL International.
 \item[TITUS\cite{TITUS}] Thesaurus Indogermanischer Text- und Sprachmaterialien.
-% \item[UNZ\cite{UNZ}] Normung von Sonderzeichen.
+\item[UNZ\cite{UNZ}] Normung von Sonderzeichen.
 
 \end{description}
 
