--- a/latex/unicode-alphabets.sty
+++ b/latex/unicode-alphabets.sty
@@ -35,6 +35,7 @@
 \alph@setup{CYFI}{cyfi}
 \alph@setup{MUFI}{mufi}
 \alph@setup{TITUS}{titus}
+\alph@setup{UNZ}{unz}
 \alph@keys{
 	LINCUA/.style={CYFI,MUFI,TITUS}
 }
