--- a/latex/unicode-alphabets.sty
+++ b/latex/unicode-alphabets.sty
@@ -34,6 +34,7 @@
 }
 \alph@setup{CYFI}{cyfi}
 \alph@setup{MUFI}{mufi}
+\alph@setup{SIL}{sil}
 \alph@setup{TITUS}{titus}
 \alph@setup{UNZ}{unz}
 \alph@keys{
