--- a/docs/unicode-alphabets.tex
+++ b/docs/unicode-alphabets.tex
@@ -8,7 +8,7 @@
 \usepackage{float}
 \usepackage{moreverb}
 
-\title{Unicode Alphabets}
+\title{Unicode Alphabets for \LaTeX}
 \author{Mikkel Eide Eriksen}
 
 \usepackage{fontspec}
@@ -92,7 +92,7 @@ Finally, the \verb|MUFI| and \verb|UNZ| character sets have defined entity names
 
 Each set defines a macro in the following manner. Let's use \verb|MUFI| as an example.
 
-By default, a macro with the lower-case name of the character set is defined: \verb|\mufi{}|. It can then be used to display characters from the given set:
+By default, a macro with the lower-case name of the character set is defined: \verb|\mufi{}|. It can then be used to display characters from the given set (the below uses the \emph{Palemonas MUFI} font available from the MUFI project):
 
 \begin{figure}[H]
 \centering
