License fix for github

--- a/latex/unicode-alphabets.sty
+++ b/latex/unicode-alphabets.sty
@@ -1,5 +1,8 @@
 \ProvidesPackage{unicode-alphabets}[2019/07/17 Unicode alphabets in the Private Use Area]
 
+% License: CC-BY-4.0
+% Author: Mikkel Eide Eriksen <mikkel.eriksen@gmail.com>
+
 \RequirePackage{pgfkeys}
 \RequirePackage{pgfopts}
 
