Use \input instead of \include (Fixes #2)
Thanks to Ulrike Fischer

--- a/latex/unicode-alphabets.sty
+++ b/latex/unicode-alphabets.sty
@@ -1,4 +1,4 @@
-\ProvidesPackage{unicode-alphabets}[2019/07/18 Unicode alphabets in the Private Use Area]
+\ProvidesPackage{unicode-alphabets}[2019/07/19 Unicode alphabets in the Private Use Area]
 
 % License: CC-BY-4.0
 % Author: Mikkel Eide Eriksen <mikkel.eriksen@gmail.com>
@@ -11,7 +11,7 @@
 
 \RequirePackage{csvsimple}
 
-\include{csvsimple.tmp.patch}
+\input{csvsimple.tmp.patch}
 
 \makeatletter
 
