--- a/latex/unicode-alphabets.sty
+++ b/latex/unicode-alphabets.sty
@@ -1,6 +1,6 @@
 \ProvidesPackage{unicode-alphabets}[2019/07/19 Unicode alphabets in the Private Use Area]
 
-% License: CC-BY-4.0
+% License: CC-BY-SA 4.0
 % Author: Mikkel Eide Eriksen <mikkel.eriksen@gmail.com>
 
 \RequirePackage{pgfkeys}
